--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@ __pycache__/
 venv/
 .env
 
+# Data
+data/
+
+# Vector DB
+.chromadb/
+
 # IDE
 .vscode/
 .idea/
-
-# Data
-data/
 
 # Logs and databases
 *.log
