--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,22 @@ backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F5F5F5"
 textColor = "#333333"
 font = "sans serif"
+
+[server]
+customTheme = """
+[Custom]
+responseBox = '''
+    background-color: #f8f9fa;
+    border-radius: 10px;
+    padding: 1.5rem;
+    margin: 1rem 0;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+'''
+sourceContent = '''
+    font-family: monospace;
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 5px;
+    border: 1px solid #dee2e6;
+'''
+"""
